Fix refresh button appearing behind list

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -199,11 +199,10 @@ body {
   margin: 0 auto;
   position: sticky;
   top: 57px;
+  z-index: 6;
 }
 
 .global-refetch-btn:hover {
-  background: white;
-  color: #1f1f1f;
   border: 2px solid white;
 }
 
